# drishti

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
drishti/: __init__.py  collector.py  config.py  errors.py  token_estimation.py  trace.py
drishti/cli/: __init__.py  main.py
drishti/cost/: __init__.py  calculator.py  pricing.py
drishti/display/: __init__.py  summary.py  tree.py
drishti/export/: __init__.py  json.py
drishti/models/: __init__.py  span.py  trace.py
drishti/providers/: __init__.py  anthropic.py  base.py  cohere.py  common.py  groq.py  manager.py  missing.py  mistral.py  ollama.py  openai.py  together.py
examples/: anthropic_agent.py  async_agent.py  multi_step_agent.py  openai_agent.py
tests/: conftest.py  test_budget.py  test_cli.py  test_collector.py  test_concurrency.py  test_config.py  test_cost.py  test_display.py  test_export.py  test_patch_manager.py  test_span.py  test_trace.py
tests/integration/: test_async_trace.py  test_trace_decorator.py
tests/providers/: test_anthropic.py  test_cohere.py  test_groq.py  test_mistral.py  test_ollama.py  test_openai.py  test_together.py
